<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>rscr</name>
    <description>RS-class requirements project</description>
    <groupId>com.firstlinesoftware</groupId>
    <artifactId>rscr</artifactId>
    <version>2.2-SNAPSHOT</version>
    <packaging>war</packaging>

    <parent>
        <groupId>com.firstlinesoftware</groupId>
        <artifactId>customer-base</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <properties>
        <version.aurora>2.7-SNAPSHOT</version.aurora>
        <customer.server>alfsrv01</customer.server>
        <version.gin>2.1.2</version.gin>
        <version.guava>15.0</version.guava>
        <version.springframework>4.2.2.RELEASE</version.springframework>
    </properties>

    <profiles>
        <profile>
            <id>jdbc</id>
            <properties>
                <platform>jdbc</platform>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <resources>
                    <resource>
                        <directory>src/main/model/</directory>
                        <includes>
                            <include>**</include>
                        </includes>
                        <filtering>false</filtering>
                        <targetPath>model</targetPath>
                    </resource>
                </resources>
            </build>
        </profile>
        <profile>
            <id>debug</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <env>debug</env>
                <application.version>DEBUG</application.version>
                <tomcat.url>http://localhost/manager/text</tomcat.url>
                <gwt.style>OBFUSCATED</gwt.style>
                <gwt.logLevel>ERROR</gwt.logLevel>
            </properties>
        </profile>
        <profile>
            <id>nightly</id>
            <properties>
                <env>nightly</env>
                <application.version>${SVN_REVISION} - ${maven.build.timestamp}</application.version>
                <tomcat.url>http://alfsrv01.domain.corp:8080/manager/text</tomcat.url>
                <gwt.style>OBFUSCATED</gwt.style>
                <gwt.logLevel>ERROR</gwt.logLevel>
                <gwt.compiler.optimizationLevel>9</gwt.compiler.optimizationLevel>
            </properties>
        </profile>
        <profile>
            <id>release</id>
            <properties>
                <env>release</env>
                <application.version>${project.version}</application.version>
                <tomcat.url>http://alfsrv01.domain.corp/manager/text</tomcat.url>
                <gwt.style>OBFUSCATED</gwt.style>
                <gwt.logLevel>ERROR</gwt.logLevel>
                <gwt.compiler.optimizationLevel>9</gwt.compiler.optimizationLevel>
            </properties>
        </profile>
        <profile>
            <id>production</id>
            <properties>
                <env>production</env>
                <application.version>${project.version}</application.version>
                <tomcat.url>http://192.168.103.91/manager/text</tomcat.url>
                <gwt.style>OBFUSCATED</gwt.style>
                <gwt.logLevel>ERROR</gwt.logLevel>
                <gwt.compiler.optimizationLevel>9</gwt.compiler.optimizationLevel>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>com.firstlinesoftware</groupId>
            <artifactId>route</artifactId>
            <version>${version.aurora}</version>
        </dependency>
        <dependency>
            <groupId>com.firstlinesoftware.pdfcropper</groupId>
            <artifactId>pdfcropper</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <!--test dependencies-->
        <dependency>
            <groupId>com.firstlinesoftware</groupId>
            <artifactId>base</artifactId>
            <version>${version.aurora}</version>
            <classifier>tests</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${version.springframework}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <version>${version.springframework}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${version.guava}</version>
        </dependency>
        <dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
            <version>1</version>
        </dependency>

        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>${version.gwt}</version>
        </dependency>

        <dependency>      <!--GWT compiler-->
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.5</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>5.0.3</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-commons</artifactId>
            <version>5.0.3</version>
        </dependency>

        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${version.gwt}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20090211</version>
            <!--<scope>provided</scope>-->
            <!--also needed by alfresco-->
        </dependency>
        <dependency>
            <groupId>com.google.gwt.inject</groupId>
            <artifactId>gin</artifactId>
            <version>${version.gin}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava-gwt</artifactId>
            <version>${version.guava}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>gwt</groupId>
            <artifactId>gwtent</artifactId>
            <version>2.0RC1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>gwt</groupId>
            <artifactId>gwt-vl</artifactId>
            <version>2.0b</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.firstlinesoftware</groupId>
            <artifactId>gwt-plupload</artifactId>
            <version>1.5.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.fusesource.restygwt</groupId>
            <artifactId>restygwt</artifactId>
            <version>1.3.13</version>
            <scope>provided</scope>
            <!--version 1.3.* is a patched version of resty 1.3.1 from maven central
            when applying the next version of restygwt please check that
            org.fusesource.restygwt.client.AbstractRequestCallback uses response.getText() instead of response.getStatusText()
            when calling callback.onFailure method (see resty 1.2 AbstractRequestCallback line 52)
            and JsonEncodeDecoder generator is also patched
            -->
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>fontbox</artifactId>
            <version>2.0.3</version>
        </dependency>

        <!--<dependency>-->
            <!--<groupId>com.firstlinesoftware.pdfparser</groupId>-->
            <!--<artifactId>pdfparser</artifactId>-->
            <!--<version>1.2-SNAPSHOT</version>-->
            <!--<classifier>zip</classifier>-->
            <!--<type>zip</type>-->
            <!--<exclusions>-->
                <!--<exclusion>-->
                    <!--<groupId>*</groupId>-->
                    <!--<artifactId>*</artifactId>-->
                <!--</exclusion>-->
            <!--</exclusions>-->
        <!--</dependency>-->

        <dependency>
            <groupId>com.firstlinesoftware</groupId>
            <artifactId>ord</artifactId>
            <version>${version.aurora}</version>
        </dependency>

    </dependencies>

    <build>
        <finalName>rscr</finalName>
        <resources>
            <resource>
                <directory>src/main/resources/</directory>
                <includes>
                    <include>**</include>
                </includes>
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/properties/${env}-${platform}</directory>
                <includes>
                    <include>**</include>
                </includes>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/properties/common</directory>
                <includes>
                    <include>**</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <useReleaseProfile>false</useReleaseProfile>
                    <releaseProfiles>${profile}</releaseProfiles>
                    <remoteTagging>false</remoteTagging>
                    <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
                    <preparationGoals>clean package</preparationGoals>
                    <goals>deploy tomcat7:redeploy</goals>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1.1</version>
                <configuration>
                    <overlays>
                        <overlay>
                            <groupId>com.firstlinesoftware</groupId>
                            <artifactId>reference</artifactId>
                            <type>war</type>
                            <targetPath>/</targetPath>
                            <excludes>
                                <exclude>Main/**</exclude>
                                <!--<exclude>WEB-INF/deploy/*</exclude>-->
                                <!--<exclude>WEB-INF/lib/base*</exclude>-->
                                <!--<exclude>WEB-INF/lib/crm*</exclude>-->
                                <!--<exclude>WEB-INF/lib/orgstruct*</exclude>-->
                                <!--<exclude>WEB-INF/lib/ecm*</exclude>-->
                                <exclude>WEB-INF/lib/ord*</exclude>
                                <exclude>WEB-INF/lib/ddo*</exclude>
                                <exclude>WEB-INF/lib/gov*</exclude>
                                <exclude>WEB-INF/lib/plm*</exclude>
                                <exclude>WEB-INF/lib/archive*</exclude>
                                <exclude>WEB-INF/lib/store*</exclude>
                                <exclude>WEB-INF/lib/stockman*</exclude>
                                <exclude>WEB-INF/lib/fin*</exclude>
                                <exclude>WEB-INF/lib/job*</exclude>
                                <exclude>WEB-INF/lib/wms*</exclude>
                                <exclude>WEB-INF/lib/mes*</exclude>
                                <exclude>WEB-INF/lib/koap*</exclude>
                                <exclude>WEB-INF/lib/exec*</exclude>
                                <exclude>WEB-INF/lib/route*</exclude>
                                <exclude>WEB-INF/lib/reg*</exclude>
                                <exclude>WEB-INF/lib/products*</exclude>
                                <exclude>WEB-INF/lib/hr*</exclude>
                                <exclude>WEB-INF/lib/passports*</exclude>
                                <exclude>WEB-INF/lib/digest*</exclude>
                                <!--<exclude>debug.html</exclude>-->
                                <exclude>main_en.html</exclude>
                                <exclude>main.html</exclude>
                                <exclude>WEB-INF/classes/application.properties</exclude>
                                <exclude>WEB-INF/classes/log4j.properties</exclude>
                                <exclude>WEB-INF/classes/usecases/ecm/GetDocumentUC.groovy</exclude>
                            </excludes>
                        </overlay>
                    </overlays>
                    <webResources>
                        <resource>
                            <filtering>false</filtering>
                            <directory>src/main/webapp</directory>
                            <includes>
                                <include>**/*</include>
                            </includes>
                            <excludes>
                                <exclude>main.html</exclude>
                            </excludes>
                        </resource>
                        <resource>
                            <filtering>true</filtering>
                            <directory>src/main/webapp</directory>
                            <includes>
                                <include>main.html</include>
                            </includes>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${version.gwt}</version>
                <configuration>
                    <extraParam>false</extraParam>
                    <extra>target/gwt-extras</extra>
                    <compileReport>false</compileReport>
                    <extraJvmArgs>-Xmx3G -Xms1G -XX:MaxPermSize=256M -XX:+UseSerialGC -XX:ReservedCodeCacheSize=128m</extraJvmArgs>
                    <runTarget>main.html</runTarget>
                    <fragmentCount>22</fragmentCount>
                    <localWorkers>2</localWorkers>
                    <enableClosureCompiler>true</enableClosureCompiler>
                    <logLevel>WARN</logLevel>
                </configuration>
                <executions>
                    <execution>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
                <version>2.3.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
            </plugin>

        </plugins>
    </build>

    <repositories>
        <repository>
            <id>aurora-snapshots</id>
            <url>http://demo.aurora-ecm.ru/nexus/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>aurora-releases</id>
            <url>http://demo.aurora-ecm.ru/nexus/content/repositories/releases</url>
        </repository>
    </repositories>

    <scm>
        <connection>scm:svn:https://svn.firstlinesoftware.com/internal/alfresco/trunk</connection>
        <developerConnection>scm:svn:https://svn.firstlinesoftware.com/internal/alfresco/trunk</developerConnection>
    </scm>

</project>